--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-MONGO_URL = mongodb+srv://SDGPse66:modaKavin@users.z9lrpe6.mongodb.net/?retryWrites=true&w=majority
+# MONGO_URL = mongodb+srv://SDGPse66:modaKavin@users.z9lrpe6.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://SDGP-SE-66:SDGPgroupNo66@sdgp-se-66.t5y5dxv.mongodb.net/?retryWrites=true&w=majority
