--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.15.13",
@@ -21,6 +22,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "dotenv": "^16.0.3",
+    "express": "^4.18.3",
     "draft-js": "^0.11.7",
     "formik": "^2.2.9",
     "react": "^18.2.0",
@@ -31,8 +33,13 @@
     "react-icons": "^5.0.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
+    "react-slick": "^0.30.2",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
+    "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1",
     "source-map-loader": "^5.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
