--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mailgen": "^2.0.28",
     "mongoose": "^8.2.1",
     "nodemailer": "^6.9.10",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "socket.io": "^4.7.5"
   }
 }
