--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "react-scripts": "^5.0.1",
+    "rollup": "^4.13.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.0"
   }
